# spotify-api-python-sdk

./: README.md  pyproject.toml
doc/: client.md
doc/auth/: oauth-2-authorization-code-grant.md
doc/controllers/: albums.md  artists.md  audiobooks.md  categories.md  chapters.md  episodes.md  genres.md  markets.md  player.md  playlists.md  search.md  shows.md  tracks.md  users.md
doc/models/: album-base.md  album-object.md  artist-discography-album-object.md  audio-analysis-object.md  audio-features-object.md  audiobook-base.md  audiobook-object.md  chapter-base.md  chapter-object.md  currently-playing-context-object.md  currently-playing-object.md  device-object.md  episode-base.md  episode-object.md  error-object.md  many-tracks.md  me-player-play-request.md  meta.md  paging-playlist-track-object.md  paging-saved-album-object.md  paging-saved-audiobook-object.md  paging-saved-episode-object.md  paging-saved-show-object.md  paging-saved-track-object.md  paging-track-object.md  play-history-object.md  playlist-owner-object.md  playlist-track-object.md  playlist-user-object.md  public-user-object.md  queue-object.md  recommendations-object.md  saved-album-object.md  saved-audiobook-object.md  saved-episode-object.md  saved-show-object.md  saved-track-object.md  section-object.md  segment-object.md  show-base.md  (+5 more)
spotifywebapi/: __init__.py  api_helper.py  configuration.py  spotifywebapi_client.py
spotifywebapi/controllers/: albums_controller.py  artists_controller.py  audiobooks_controller.py  base_controller.py  categories_controller.py  chapters_controller.py  (+10 more)
(+152 files in other folders)
