[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "spotify-api-sdk"
description = "You can use Spotify's Web API to discover music and podcasts, manage your Spotify library, control audio playback, and much more. Browse our available Web API endpoints using the sidebar at left, or via the navigation bar on top of this page on smaller screens."
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Spotify", "Apimatic", "SDK", "API"]
authors = [{name = "developer sdksio", email = "developer+sdksio@apimatic.io"}]
urls = {Documentation = "https://spotify-poc.pages.dev/"}
dependencies = ["apimatic-core~=0.2.0, >= 0.2.15", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
